# she_ini

./: CMakeLists.txt  IniTestFile.ini  README.md  config.ini
example/: CMakeLists.txt  config.ini  main.cpp
src/: DealIni.cpp  DealIni.h  FSM.cpp  FSM.h  FSMState.h  IniState.h  IniStructure.cpp  IniStructure.h  InterfaceExample.h  StringExtend.h  example.cpp  state.h  temp.h
src/DataStructure/: Section.h
src/Fsm/: Fsm.cpp  Fsm.h
src/Parse/: Parse.cpp  Parse.h
test/: example.cpp  main.cpp  method_2.h  method_3_FSM_test.h  method_4_for_every_char.h  method_5_magic_enum_test.h  method_6_IniStructure_test.h
